5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_2195.log
== TEST (2019-05-01 18:45:05) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)
if(ano>0)
-- ERROR:
File "XXXX", line 8
    if(ano>0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:45:18) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)
if(ano>0):
-- ERROR:
File "XXXX", line 9
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:45:42) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)

-- OUTPUT:
15
8
1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:46:33) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)

-- OUTPUT:
15
8
1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:49:25) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)

-- OUTPUT:
15
8
1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:52:35) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)

-- OUTPUT:
15
8
1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:53:02) 
-- CODE:
data=int(input())
dia=data//1000000
print(dia)
mes=(data//10000)%100
print(mes)
ano=data%10000
print(ano)

-- OUTPUT:
15
8
1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
